--- a/partials/_common.scss
+++ b/partials/_common.scss
@@ -1,68 +1,16 @@
-.container {
-  width: 70%;
-  margin: 0 auto;
-}
-
+// text
 .text-center {
   text-align: center;
 }
 
-// margin top/bottom
-.my-5 {
-  margin-top: 1em;
-  margin-bottom: 1em;
+.upper {
+  text-transform: uppercase;
 }
 
-.my-10 {
-  margin-top: 2em;
-  margin-bottom: 2em;
+.bold {
+  font-weight: bold;
 }
 
-// padding l/r
-.px-5 {
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-.px-10 {
-  padding-left: 2em;
-  padding-right: 2em;
-}
-
-// padding top/bottom
-.py-5 {
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
-
-.py-10 {
-  padding-top: 2em;
-  padding-bottom: 2em;
-}
-
-.py-20 {
-  padding-top: 3em;
-  padding-bottom: 3em;
-}
-
-// padding top
-.pt-5 {
-  padding-top: 1em;
-}
-
-.pt-10 {
-  padding-top: 2em;
-}
-
-.pt-20 {
-  padding-top: 3em;
-}
-
-// padding left
-.pl-5 {
-  padding-left: 1em;
-}
-
-.pl-10 {
-  padding-left: 2em;
+.italic {
+  font-style: italic;
 }
