--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,13 +1,9 @@
 // colori
-$color-background-black: #101010;
-$color-text-navbar-top: #5b6d6d;
-$color-icon-navbar-top: #0292fb;
 $color-white: #ffffff;
-$color-blue: #009cff;
-$color-pink: #cc397f;
-$color-lightgrey: #e6e6e6;
-$color-darkgrey: #2c2c2c;
-$color-purple: #52058f;
+$color-darkgray: #111110;
+$color-grey: #505050;
+$color-silvergrey: #b0b0b0;
+
 
 // font
 $font_family: 'Open Sans', sans-serif;
