inizio main, jumbo

--- a/partials/_content.scss
+++ b/partials/_content.scss
@@ -1,5 +1,5 @@
 main {
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  background-color: $color-grey;
+  background-color: $color-grey; //per vedere icone navbar
 }
