--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -31,3 +31,9 @@
   justify-content: space-between;
   align-items: flex-end;
 }
+
+@mixin flex-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
