--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -3,7 +3,10 @@ $color-white: #ffffff;
 $color-darkgray: #111110;
 $color-grey: #505050;
 $color-silvergrey: #b0b0b0;
+$color-wood: #ae8652;
 
 
 // font
-$font_family: 'Open Sans', sans-serif;
+$font_p: 'Open Sans', sans-serif;
+$font_title: 'Abril Fatface', sans-serif;
+$font_button: 'Lato', sans-serif;
