--- a/partials/_normalize.scss
+++ b/partials/_normalize.scss
@@ -18,3 +18,11 @@ ul {
   width: 60%;
   margin: 0 auto;
 }
+
+.container-fluid {
+  width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
