--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,5 +1,6 @@
 // colori
 $color-white: #ffffff;
+$color-lightergrey: #eae8e6;
 $color-darkgray: #111110;
 $color-grey: #505050;
 $color-silvergrey: #b0b0b0;
