--- a/partials/_content.scss
+++ b/partials/_content.scss
@@ -76,6 +76,11 @@ main {
   }
   // sezione servizi
   .services {
+    width: 100%;
+    height: 900px;
+    background-color: $color-white;
+    display: flex;
+    justify-content: center;
     
   }
 }
