--- a/partials/_content.scss
+++ b/partials/_content.scss
@@ -71,10 +71,7 @@ main {
     width: 100%;
     height: 900px;
     background-color: $color-white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    @include flex-column-evenly-center;
     .services-title {
       h3 {
         @include title-h3;
@@ -107,11 +104,9 @@ main {
   .products {
     width: 100%;
     height: 900px;
-    background-color: $color-white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    @include flex-column-evenly-center;
     .products-title {
       h3 {
         @include title-h3;
@@ -122,10 +117,10 @@ main {
         text-align: center;
       }
     }
-    .services-cards {
+    .products-cards {
       width: 100%;
       @include flex-start-start-space;
-      .card {
+      .cards {
         @include flex-column-wrap-center;
         img {
 
