--- a/partials/_normalize.scss
+++ b/partials/_normalize.scss
@@ -7,7 +7,7 @@
 }
 
 body{
-  position: relative;  
+  position: relative;
 }
 
 a {
@@ -33,4 +33,5 @@ ul {
 
 .card {
   position: unset;
+  border: 0;
 }
