--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -4,6 +4,7 @@ $color-lightergrey: #eae8e6;
 $color-darkgray: #111110;
 $color-grey: #505050;
 $color-silvergrey: #b0b0b0;
+$color-codgrey: #191817;
 $color-wood: #ae8652;
 
 
