--- a/partials/_common.scss
+++ b/partials/_common.scss
@@ -1,3 +1,29 @@
+.container {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.container-fluid {
+  width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.card {
+  position: unset;
+  border: 0;
+}
+
+// button
+.btn {
+
+  &:hover {
+
+  }
+}
+
 // text
 .text-center {
   text-align: center;
