--- a/partials/_common.scss
+++ b/partials/_common.scss
@@ -1,5 +1,6 @@
+// containers
 .container {
-  width: 60%;
+  width: 65%;
   margin: 0 auto;
 }
 
@@ -16,19 +17,31 @@
   border: 0;
 }
 
+.small-img {
+  height: 120px;
+}
+
+hr {
+  border-top: 4px solid rgba(0,0,0,.1);
+}
+
 // button
 .btn {
-
+  padding: 18px 40px;
+  line-height: 21px;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 0;
+  border-width: 2px;
+  border-color: $color-wood;
+  color: $color-wood;
   &:hover {
-
+    color: $color-wood;
+    opacity: 0.6;
   }
 }
 
 // text
-.text-center {
-  text-align: center;
-}
-
 .upper {
   text-transform: uppercase;
 }
@@ -41,8 +54,228 @@
   font-style: italic;
 }
 
-// btn
-// button
-.btn {
-  color: $color-wood;
+
+// Padding
+// Padding top e bottom
+.ptb-5 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.ptb-10 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.ptb-15 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.ptb-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.ptb-25 {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.ptb-30 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.ptb-45 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+}
+
+// Padding left e right
+.plr-5 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.plr-10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.plr-15 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.plr-20 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.plr-25 {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.plr-30 {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+// Padding right
+.pr-5 {
+  padding-right: 5px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+
+.pr-15 {
+  padding-right: 15px;
+}
+
+.pr-20 {
+  padding-right: 20px;
+}
+
+.pr-25 {
+  padding-right: 25px;
+}
+
+.pr-30 {
+  padding-right: 30px;
+}
+
+// Padding bottom
+.pb-5 {
+  padding-bottom: 5px;
+}
+.pb-10 {
+  padding-bottom: 10px;
+}
+
+.pb-15 {
+  padding-bottom: 15px;
+}
+
+.pb-20 {
+  padding-bottom: 20px;
+}
+
+.pb-25 {
+  padding-bottom: 25px;
+}
+
+.pb-30 {
+  padding-bottom: 30px;
+}
+
+.pb-50 {
+  padding-bottom: 50px;
+}
+
+
+// Padding top
+.pt-5 {
+  padding-top: 5px;
+}
+
+.pt-10 {
+  padding-top: 10px;
+}
+
+.pt-15 {
+  padding-top: 15px;
+}
+
+.pt-20 {
+  padding-top: 20px;
+}
+
+.pt-25 {
+  padding-top: 25px;
+}
+
+.pt-30 {
+  padding-top: 30px;
+}
+
+.pt-40 {
+  padding-top: 40px;
+}
+
+// Margin left-right
+.mlr-5 {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+// Margin right
+.mr-300 {
+  margin-right: 300px;
+}
+
+// Margin left
+.ml-10 {
+  margin-left: 10px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.ml-70 {
+  margin-left: 70px;
+}
+
+// Margin top
+.mt-15 {
+  margin-top: 15px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mt-70 {
+  margin-top: 70px;
+}
+
+.mt-80 {
+  margin-top: 80px;
+}
+
+.mt-120 {
+  margin-top: 120px;
+}
+
+// Margin top bottom
+.mtb-30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.mtb-50 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.mtb-70 {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.mtb-90 {
+  margin-top: 90px;
+  margin-bottom: 90px;
+}
+
+.mtb-120 {
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
