--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -6,9 +6,9 @@ $color-grey: #505050;
 $color-silvergrey: #b0b0b0;
 $color-codgrey: #191817;
 $color-wood: #ae8652;
-
+$color-paragraph: #88928f;
 
 // font
-$font_p: 'Open Sans', sans-serif;
+$font_p: 'Lato', sans-serif;
 $font_title: 'Abril Fatface', sans-serif;
 $font_button: 'Lato', sans-serif;
