--- a/partials/_content.scss
+++ b/partials/_content.scss
@@ -7,6 +7,7 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
+    padding: 4.5rem 2rem;
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -29,8 +30,8 @@ main {
         }
         // sottotitolo
         p {
+          @include paragraph;
           font-size: 25px;
-          color: $color-silvergrey;
         }
       }
       .container-img {
@@ -88,13 +89,13 @@ main {
       .card {
         @include flex-column-wrap-center;
         img {
-
         }
         h4 {
           @include title-h4;
           text-align: center;
         }
         p {
+          @include paragraph;
           text-align: center;
         }
       }
@@ -172,7 +173,7 @@ main {
             padding-bottom: 30px;
           }
           p {
-            color: $color-silvergrey;
+            @include paragraph;
           }
         }
       }
@@ -202,6 +203,7 @@ main {
         .card {
           @include flex-column-wrap-center;
           p {
+            @include paragraph;
             text-align: center;
           }
           span {
@@ -223,43 +225,40 @@ main {
     }
   }
   // sezione Blog Posts
-  .container-blog {
+  .blog {
+    width: 100%;
     height: 950px;
     background-color: $color-lightergrey;
     @include flex-column-evenly-center;
     align-items: center;
-    .blog {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .blog-title {
-        h3 {
-          @include title-h3;
-          text-align: center;
-        }
-        h1 {
-          @include title-h1;
-          text-align: center;
-        }
+    .blog-title {
+      h3 {
+        @include title-h3;
+        text-align: center;
       }
-      .blog-cards {
-        width: 100%;
-        @include flex-start-start-space;
-        .cards {
-          @include flex-column-wrap-center;
-          align-content: center;
-          img {
-            vertical-align: top;
-            max-width: 100%;
-            height: auto;
-          }
-          h4 {
-            @include title-h4;
-            text-align: center;
-          }
-          p {
-            text-align: center;
-          }
+      h1 {
+        @include title-h1;
+        text-align: center;
+      }
+    }
+    .blog-cards {
+      width: 100%;
+      @include flex-start-start-space;
+      .cards {
+        @include flex-column-wrap-center;
+        align-content: center;
+        img {
+          vertical-align: top;
+          max-width: 100%;
+          height: auto;
+        }
+        h4 {
+          @include title-h4;
+          text-align: center;
+        }
+        p {
+          text-align: center;
+          @include paragraph;
         }
       }
     }
