--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -68,7 +68,7 @@ align-items: flex-start;
 // TITOLI
 @mixin title-h3 {
   color: $color-wood;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -83,4 +83,10 @@ align-items: flex-start;
   color: $color-wood;
   font-size: 30px;
   font-weight: bold;
+}
+
+@mixin paragraph {
+  color: $color-paragraph;
+  font-size: 17px;
+  font-weight: 300;
 }
