--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -29,6 +29,7 @@ footer {
           .icons {
             i {
               color: $color-silvergrey;
+              padding: 0 5px;
             }
           }
         }
