--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -10,6 +10,13 @@
   align-items: center;
 }
 
+@mixin flex-center-center-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
 @mixin flex-center-between {
   display: flex;
   justify-content: space-between;
