--- a/partials/_content.scss
+++ b/partials/_content.scss
@@ -152,8 +152,8 @@ main {
         border-style: solid;
         border-width: 4px 0px 0px;
         border-color: $color-wood;
+        @include flex-center-center-center;
         img {
-
         }
       }
       .container-description {
@@ -255,6 +255,7 @@ main {
         h4 {
           @include title-h4;
           text-align: center;
+          padding: 15px 0;
         }
         p {
           text-align: center;
