--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -5,8 +5,11 @@ $color-darkgray: #111110;
 $color-grey: #505050;
 $color-silvergrey: #b0b0b0;
 $color-codgrey: #191817;
-$color-wood: #ae8652;
 $color-paragraph: #88928f;
+
+// modifica del colore
+$color-wood: #409ad3;
+
 
 // font
 $font_p: 'Lato', sans-serif;
