--- a/partials/_normalize.scss
+++ b/partials/_normalize.scss
@@ -17,7 +17,7 @@ a:-webkit-any-link{
 text-decoration:none !important;
 }
 
-ul {
+ul li {
   list-style: none;
 }
 
@@ -25,6 +25,6 @@ img {
   cursor: pointer;
 }
 
-.navbar {
-  padding: 0;
-}
+// .navbar {
+//   padding: 0;
+// }
