--- a/partials/_common.scss
+++ b/partials/_common.scss
@@ -56,7 +56,7 @@ hr {
 
 
 // Padding
-// Padding top e bottom
+// Padding top bottom
 .ptb-5 {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -92,7 +92,7 @@ hr {
   padding-bottom: 50px;
 }
 
-// Padding left e right
+// Padding left right
 .plr-5 {
   padding-left: 5px;
   padding-right: 5px;
