--- a/partials/_normalize.scss
+++ b/partials/_normalize.scss
@@ -21,9 +21,9 @@ ul li {
   list-style: none;
 }
 
-img {
-  cursor: pointer;
-}
+// img {
+//   cursor: pointer;
+// }
 
 // .navbar {
 //   padding: 0;
