--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -12,5 +12,5 @@ $color-wood: #409ad3;
 
 // font
 $font_p: 'Lato', sans-serif;
-$font_title: 'Abril Fatface', sans-serif;
+$font_title: 'Abril Fatface', cursive;
 $font_button: 'Lato', sans-serif;
