--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -14,3 +14,4 @@ $color-wood: #409ad3;
 $font_p: 'Lato', sans-serif;
 $font_title: 'Abril Fatface', cursive;
 $font_button: 'Lato', sans-serif;
+// dfhfj
